--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.8.4",
+    "emailjs-com": "^3.2.0",
     "firebase": "^11.6.0",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
